Add a landing page header

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
 		content="BitMex Trader"
 	/>
 	<title>BitMex Trader</title>
+	<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.15.2/css/all.css"></link>
 </head>
 <body>
 	<noscript>You need to enable JavaScript to run this app.</noscript>
