--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 		name="description"
 		content="BitMex Trader"
 	/>
-	<title>BitMex Trader</title>
+	<title>CryptoBot</title>
 	<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.15.2/css/all.css"></link>
 </head>
 <body>
